package main.java.hw3;

public interface DataLoader {
    boolean hasNext();
    String next();
}

