package hw3;

public interface DataSaver {
    public boolean writeNext(String data);
    public boolean closeSaver();
}
