package main.java.hw3;

public class JsonGuitarRecord {
}
